@@ -1,6 +1,8 @@
 package com.igor.igor.util;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -13,16 +15,15 @@ public class Util {
 	
 	private StringBuilder next= new StringBuilder();
 
-	public URL urlFormater(HttpServletRequest request, Pageable paging, List<String> hashTag) {
-		 URL url=null;
+	public URI uriFormater(HttpServletRequest request, Pageable paging, List<String> hashTag, List<String> username) {
+		 URI uri = null;
+		 
 		 next.append(request.getRequestURL().toString()); //popravi
-		 next.append("?");
-		 if(request.getParameter("limit")!=null) {
-			  next.append("limit="+request.getParameter("limit")+"&");
-		 }
-		 if(request.getParameter("offset")!=null) {		  
+	
+		 next.append("?limit="+paging.getPageSize()+"&");
+		  
 		 next.append("offset="+paging.next().getPageNumber());
-		 }
+		 
 		 if(hashTag!=null) {
 		 for(String h : hashTag) {
 			 next.append("&hashTag=%23");
@@ -30,13 +31,20 @@ public class Util {
 			 
 		 }
 		 }
+		 if(username!=null) {
+			 for(String u : username) {
+				 next.append("&username=");
+				 next.append(u.substring(1));
+				
+			 }
+			 }
 			try {
-				url = new URL(next.toString());
-			} catch (MalformedURLException e) {
+				uri = new URI(next.toString());
+			} catch (URISyntaxException e) {
 				e.printStackTrace();
 			}
 		
-			return url;
+			return uri;
 		
 	}
 
